Salesforce CPQ/main/default/objects/Cost__c/Cost__c.object-meta.xml
<CustomObject>
    <customHelpPage>CostHelp</customHelpPage>
    <description>Unit cost for a product in one currency.</description>
    <label>Cost</label>
    <nameField>
        <displayFormat>COST-{000000}</displayFormat>
        <label>Cost #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>