Salesforce CPQ/main/default/objects/Cost__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate whether the cost is active.</description>
    <inlineHelpText>Select the checkbox to activate the cost.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>