Salesforce CPQ/main/default/objects/Cost__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <description>This field indicates the unit cost.</description>
    <inlineHelpText>Enter the unit cost.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>